--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>５章課題</title>
-        <meta name="description" content="このページは５章の課題です">
+        <meta name="description" content="このページは５章の課題です。">
         <meta charset="UTF-8">
     </head>
     <body>
@@ -10,7 +10,7 @@
         <P>私は中学時代にサッカーを始めました。<br>
         現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。
     </P>
-    <img src="../images/sample.jpg" alt="ロゴ">
+    <img src="../images/sample.jpg" alt="サッカーボールサッカーボール">
      <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
     </body>
 </html>
