--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -59,7 +59,7 @@
             <br>
 
             <input type="submit" value="送信">
-            <input type="submit" value="リセット">
+            <input type="reset" value="リセット">
         </form>
         </section>
     </article>
@@ -71,7 +71,7 @@
                 動画の内容はHTML/CSSの解説です。
             </P>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo?si=0324n1eZTrGGObHL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            
+        </section>    
     </article>
 </main>
         <footer>
