--- a/kadai_005/kadai_005.html
+++ b/kadai_005/kadai_005.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>５章課題</title>
-        <meta name="description" content="このページは５章の課題です。">
+        <title>5章課題</title>
+        <meta name="description" content="このページは5章の課題です。">
         <meta charset="UTF-8">
     </head>
     <body>
         <h1>私の趣味</h1>
-        <P>私は中学時代にサッカーを始めました。<br>
+        <p>私は中学時代にサッカーを始めました。<br>
         現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。
-    </P>
+        </p>
     <img src="../images/sample.jpg" alt="サッカーボール">
      <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
     </body>
